--- a/src/JejuneCmd/JejuneCmd.fsproj
+++ b/src/JejuneCmd/JejuneCmd.fsproj
@@ -6,11 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Gen.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Jejune\Jejune.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Fsharp.Data" Version="3.3.3" />
+    <PackageReference Include="Handlebars.Net" Version="2.0.4" />
   </ItemGroup>
 
 </Project>
